fixed some alignment issues

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 button{
     color: white;
     background: blue;
+    size: 10em;
 }
